--- a/.exp/old/index.html
+++ b/.exp/old/index.html
@@ -1,6 +1,48 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Najlepszy prezent dla chłopaka</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="icon" href="images/logo2.png" />
+    <script src="js/load-html.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/scrolling.js"></script>
+  </head>
+  <body>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button
+            type="button"
+            class="navbar-toggle"
+            data-toggle="collapse"
+            data-target="#myNavbar"
+          >
+            <span class="icon-bar"></span> <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"
+            ><img id="logo" src="images/logo3.png"
+          /></a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Zamów</a></li>
+            <li><a href="#">Kontakt</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <div id="all-page-question" class="with-grey-gradient-bg">
       <h1>Nie masz pomysłu na prezent?</h1>
@@ -116,3 +158,8 @@ layout: default
       </p>
     </div>
 
+    <footer class="container-fluid text-center">
+      <a href="#">Please read our privacy policy</a> <a></a>
+    </footer>
+  </body>
+</html>
