--- a/index.html
+++ b/index.html
@@ -2,117 +2,115 @@
 layout: default
 ---
 
-    <div id="all-page-question" class="with-grey-gradient-bg">
-      <h1>Nie masz pomysłu na prezent?</h1>
-      <img
-        onclick="moveToAnswer()"
-        class="navigation-arrow"
-        id="arrow-down-first"
-        src="images/arrow-down-grey.gif"
-      />
-    </div>
+<div id="all-page-question" class="with-grey-gradient-bg">
+  <h1>Nie masz pomysłu na prezent?</h1>
+  <img
+    onclick="moveToAnswer()"
+    class="navigation-arrow"
+    id="arrow-down-first"
+    src="images/arrow-down-grey.gif"
+  />
+</div>
 
-    <div id="answer-section" class="container text-center">
-      <h2>My mamy!</h2>
-      <br />
-      <div class="row">
-        <div class="col-sm-6">
-          <img src="images/drone-white.jpg" style="width:100%" alt="Image" />
-        </div>
-        <div class="col-sm-6">
-          <ul class="drone-description-list">
-            <li>
-              <a
-                href="#"
-                data-toggle="tooltip"
-                data-html="true"
-                data-placement="left"
-                title="X km/h"
-                >Szybki</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                data-toggle="tooltip"
-                data-html="true"
-                data-placement="left"
-                title="10 cm * 10 cm * 2 cm"
-                >Mały</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                data-toggle="tooltip"
-                data-html="true"
-                data-placement="left"
-                title="około 30 metrów"
-                >Dobry zasięg</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                data-toggle="tooltip"
-                data-html="true"
-                data-placement="left"
-                title="Baterii wystarcza na 6 minut lotu - u nas za darmo dostajesz dodtakową baterię"
-                >Wytrzymały</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                data-toggle="tooltip"
-                data-html="true"
-                data-placement="left"
-                title="TODO - dodać jakiś dowód"
-                >Prawie nieśmiertelny</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                data-toggle="tooltip"
-                data-html="true"
-                data-placement="left"
-                title="<h4>Komplet zawiera ponad wszystko</h4>"
-                >Gotowy do uzycia</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-      <img
-        onclick="moveToTheBestGiftSection()"
-        class="navigation-arrow"
-        id="arrow-down-second"
-        src="images/arrow-down-grey.gif"
-      />
+<div id="answer-section" class="container text-center">
+  <h2>My mamy!</h2>
+  <br />
+  <div class="row">
+    <div class="col-sm-6">
+      <img src="images/drone-white.jpg" style="width:100%" alt="Image" />
     </div>
-
-    <div class="container text-center" id="best-gift-section">
-      <h2>Ale dlaczego to jest najlepszy prezent?</h2>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem Ipsum has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book. It has survived not only five
-        centuries, but also the leap into electronic typesetting, remaining
-        essentially unchanged. It was popularised in the 1960s with the release
-        of Letraset sheets containing Lorem Ipsum passages, and more recently
-        with desktop publishing software like Aldus PageMaker including versions
-        of Lorem Ipsum. Why do we use it? It is a long established fact that a
-        reader will be distracted by the readable content of a page when looking
-        at its layout. The point of using Lorem Ipsum is that it has a
-        more-or-less normal distribution of letters, as opposed to using
-        'Content here, content here', making it look like readable English. Many
-        desktop publishing packages and web page editors now use Lorem Ipsum as
-        their default model text, and a search for 'lorem ipsum' will uncover
-        many web sites still in their infancy. Various versions have evolved
-        over the years, sometimes by accident, sometimes on purpose (injected
-        humour and the like).
-      </p>
+    <div class="col-sm-6">
+      <ul class="drone-description-list">
+        <li>
+          <a
+            href="#"
+            data-toggle="tooltip"
+            data-html="true"
+            data-placement="left"
+            title="X km/h"
+            >Szybki</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
+            data-toggle="tooltip"
+            data-html="true"
+            data-placement="left"
+            title="10 cm * 10 cm * 2 cm"
+            >Mały</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
+            data-toggle="tooltip"
+            data-html="true"
+            data-placement="left"
+            title="około 30 metrów"
+            >Dobry zasięg</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
+            data-toggle="tooltip"
+            data-html="true"
+            data-placement="left"
+            title="Baterii wystarcza na 6 minut lotu - u nas za darmo dostajesz dodtakową baterię"
+            >Wytrzymały</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
+            data-toggle="tooltip"
+            data-html="true"
+            data-placement="left"
+            title="TODO - dodać jakiś dowód"
+            >Prawie nieśmiertelny</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
+            data-toggle="tooltip"
+            data-html="true"
+            data-placement="left"
+            title="<h4>Komplet zawiera ponad wszystko</h4>"
+            >Gotowy do uzycia</a
+          >
+        </li>
+      </ul>
     </div>
+  </div>
+  <img
+    onclick="moveToTheBestGiftSection()"
+    class="navigation-arrow"
+    id="arrow-down-second"
+    src="images/arrow-down-grey.gif"
+  />
+</div>
 
+<div class="container text-center" id="best-gift-section">
+  <h2>Ale dlaczego to jest najlepszy prezent?</h2>
+  <p>
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+    Lorem Ipsum has been the industry's standard dummy text ever since the
+    1500s, when an unknown printer took a galley of type and scrambled it to
+    make a type specimen book. It has survived not only five centuries, but also
+    the leap into electronic typesetting, remaining essentially unchanged. It
+    was popularised in the 1960s with the release of Letraset sheets containing
+    Lorem Ipsum passages, and more recently with desktop publishing software
+    like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it? It
+    is a long established fact that a reader will be distracted by the readable
+    content of a page when looking at its layout. The point of using Lorem Ipsum
+    is that it has a more-or-less normal distribution of letters, as opposed to
+    using 'Content here, content here', making it look like readable English.
+    Many desktop publishing packages and web page editors now use Lorem Ipsum as
+    their default model text, and a search for 'lorem ipsum' will uncover many
+    web sites still in their infancy. Various versions have evolved over the
+    years, sometimes by accident, sometimes on purpose (injected humour and the
+    like).
+  </p>
+</div>
